assets/base.css
/* ... */
/* component-button */
/* Button - default */

.shopify-payment-button__button--branded {
  z-index: auto;
}

.button:disabled,
.button[aria-disabled='true'],
.button.disabled,
.customer button:disabled,
.customer button[aria-disabled='true'],
.customer button.disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.button.loading .icon, .button.loading span {
  opacity: 0;
}

.button:not(.ignore-effect):not(:disabled):before {
  content: "";
  position: absolute;
  top: 100%;
  bottom: 0;
  inset-inline: 0;
  background-color: rgb(var(--color-button-text));
  transition: top 500ms cubic-bezier(.03,.93,.97,1);
  border-radius: calc(var(--buttons-radius) - 1px);
}

.button:not(.ignore-effect):not(:disabled):hover {
  color: rgb(var(--color-button))!important;
  display: flex!important;
  background: rgb(var(--color-button-text)) !important;
}

.button--secondary:not(.ignore-effect):not(:disabled):hover, .button--tertiary:not(.ignore-effect):not(:disabled):hover {
  color: rgb(var(--color-button-outline));
}

.button:not(.ignore-effect):not(:disabled):hover > * {
  z-index: 0;
}

.button:not(.ignore-effect):not(:disabled):hover:before {
  top: 0;
}

@media screen and (forced-colors: active) {
  .button.loading {
    color: rgb(var(--color-foreground));
  }
}

.button .loading-overlay__spinner svg {
  height: 100%;
  width: 100%;
}

.button.loading > .loading-overlay__spinner {
  top: 50%;
  inset-inline-start: 50%;
  transform: translate(calc(var(--transform-direction) * 50%), -50%);
  position: absolute;
  height: 100%;
  width: min(5rem, 50%);
}

.button.loading > .loading-overlay__spinner .spinner {
  width: fit-content;
}

.button:focus-visible,
.button.focused,
.shopify-payment-button__button--unbranded:focus-visible,
.shopify-payment-button [role="button"]:focus-visible,
.shopify-payment-button__button--unbranded:focus,
.shopify-payment-button [role="button"]:focus {
  outline: 0;
  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),
    0 0 0 0.5rem rgba(var(--color-foreground), 0.5),
    0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
}

.button::selection,
.shopify-challenge__button::selection,
.customer button::selection {
  background-color: rgba(var(--color-button-text), 0.3);
}

.button:disabled,
.button[aria-disabled='true'],
.button.disabled,
.customer button:disabled,
.customer button[aria-disabled='true'],
.customer button.disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.button.loading:disabled,
.button.loading[aria-disabled='true'],
.button.loading.disabled {
  opacity: 1;
}

.shopify-challenge__button:hover {
  color: rgb(var(--color-button));
  background-color: rgb(var(--color-button-text));
}

/* Section heading */

.title__buttons {
  z-index: 1;
}

/* component-form */

.field {
  transition: box-shadow 100ms ease;
}

.field__input,
.select__select,
.customer .field input,
.customer select,
.spr-form-input {
  transition: box-shadow 100ms ease;
}

.form-status {
  margin: 0;
  font-size: 1.6rem;
  padding: 0.5rem 1rem;
}

.form-status-list {
  padding: 0;
  margin: 1rem 0 0;
}

.form-status-list li {
  list-style-position: inside;
}

.form-status-list .link::first-letter {
  text-transform: capitalize;
}

/* Field */

.field__input::-webkit-search-cancel-button,
.customer .field input::-webkit-search-cancel-button {
  display: none;
}

.field__input::placeholder,
.customer .field input::placeholder {
  opacity: 0;
}

.field__input:-webkit-autofill ~ .field__button,
.field__input:-webkit-autofill ~ .field__label,
.customer .field input:-webkit-autofill ~ label {
  color: rgb(0, 0, 0);
}

/* Text area */

.text-area {
  min-height: 10rem;
  resize: none;
}

input[type='checkbox'] {
  display: inline-block;
  width: auto;
  margin-inline-end: 0.5rem;
}

/* component-quantity */

.quantity__input::-webkit-outer-spin-button,
.quantity__input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.quantity__input[type='number'] {
  -moz-appearance: textfield;
}

.quantity__button {
  transition: background-color 300ms ease;
}

.quantity__button:hover:not(:active) {
  background-color: rgb(var(--color-foreground), .1);
}

.quantity__button:active {
  background-color: rgb(var(--color-foreground), .5);
}

.quantity__button:focus-visible,
.quantity__input:focus-visible {
  z-index: 2;
}

.quantity__button:focus,
.quantity__input:focus {
  z-index: 2;
}

.quantity__input:-webkit-autofill,
.quantity__input:-webkit-autofill:hover,
.quantity__input:-webkit-autofill:active {
  box-shadow: 0 0 0 10rem rgb(var(--color-background)) inset !important;
  -webkit-box-shadow: 0 0 0 10rem rgb(var(--color-background)) inset !important;
}

/* Search */

.no-js details[open] > .header__icon--search {
  top: 1rem;
  inset-inline-end: 0.5rem;
}

.header__search > details .modal__close-button.link {
  z-index: 1;
}

/* Header sticky */
.shopify-section-header-sticky .hide-in-sticky {
  display: none;
}

/* Main header layout */

/* section-header */

.section-header {
  z-index: 4;
}

sticky-header {
  min-height: var(--sticky-header-height-mobile, auto);
}

sticky-header header {
  background: rgb(var(--color-background));
}

.section-header.animate header {
  transition: transform 500ms cubic-bezier(.03,.93,.97,1), top 500ms cubic-bezier(.03,.93,.97,1);
}

.shopify-section-header-sticky header {
  position: fixed;
  top: 0;
}

.shopify-section-header-hidden .header {
  transform: translateY(-100%);
}

.header-top {
  z-index: 5;
}

.header__toggle-nav-button {
  height: 4.4rem;
  transition: width 500ms ease, opacity 500ms ease, visibility 500ms ease, margin 500ms ease;
}

.header__toggle-nav-button .icon-close-state {
  display: none;
}

.header *[tabindex='-1']:focus {
  outline: none;
}

.header__heading-link:hover .h2 {
  color: rgb(var(--color-foreground));
}
/* ... */

